# llmask

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
adversarial_stylometry_llm/: cli.py  main.py  model.py  prompt.py  serve.py  transform.py
adverserial_stylometry_llm/: prompt.py
llmask/: cli.py  config.py  model.py  prompt.py  serve.py  transform.py
scripts/: 01_download_model.sh  serve_model.sh
tests/unit/: __init__.py  test_model.py  test_transform.py
