[tool.poetry]
name = "llmask"
version = "0.1.0"
description = ""
authors = ["top-on <top-on@posteo.de>"]
readme = "README.md"
packages = [{ include = "llmask" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.8.0"
typer = "^0.9.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[tool.poetry.scripts]
llmask = "llmask.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
